fixed z-index on header problem

--- a/src/main.scss
+++ b/src/main.scss
@@ -143,6 +143,12 @@
 #wc-quote {
     margin: 36px;
     font-style: italic;
+    // z-index: 1;
+}
+.quote-index {
+    z-index: 1;
+}
+.z-index-1 {
     z-index: 1;
 }
 
